Fix scrollbar background

--- a/frontend/src/styles/Scrollbar.css
+++ b/frontend/src/styles/Scrollbar.css
@@ -1,15 +1,17 @@
 /* Track */
 ::-webkit-scrollbar {
     width: 8px;
+    background: #e4e4e4;
+    border-radius: 8px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #2196f3; /* Change this to your desired color */
     border-radius: 8px;
+    background: #1976d2;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #0a5ad3; /* Change this to your desired color on hover */
+    background: #1565c0;
 }
